# c_homework

./: CMakeLists.txt  myHeaders.h  program1.c
exams/2015A/: crypt.c  gsubarray.c
exams/2015B/: texttotree.c
exams/2016B/: arrpp.c  crypt.c  intersection.c  ispreorder.c  leader.c
exams/2016BB/: calcfreq.c  intersction.c
exams/2017A/: gzip.c
targil1/: program.c
targil2/: program.c
week1/myLibs/: isBegginingOfWord.c
week1/targil1/: program.c
week1/targil1/myLibs/: isNewLine.c  reverseNumber.c
week1/targil2/: program.c
week1/targil2/myLibs/: createNumByIdx.c  getLength.c  getMax.c
week2/targil1/: program.c
week2/targil2/: program.c
week2/targil3/: program.c
week2/targil4/: program.c
week2/targil5/: program.c
week2/targil6/: program.c
week3/targil1/: game.txt  program.c
week3/targil2/: program.c
week4/targil1/: maxlength.c  maxlength.h  printing.c  printing.h  program-1.c  program.c  sorting.c  sorting.h
week4/targil2/: program.c  sorting.c  sorting.h
week4/targil3/: program.c  transposing.c  transposing.h
week5/: gzip.c  max.c  texttotree.c
week5/node/: Node.c
week5/targil1/: 1.1.txt  program1.2.c  program1.3.c
week5/targil2/: program.c
week5/targil3/: Nodes.h  program.c
week5/targil4/: Nodes.h  program.c
week5/targil5/: program.c  program1.c  program2.c
